--- a/hil-2.2.0/server/hil_server.cfg
+++ b/hil-2.2.0/server/hil_server.cfg
@@ -1,7 +1,8 @@
 # HIL Stack Server configuration file
 [server]
 log_level=DEBUG
-address=localhost
+#address=localhost
+address=0.0.0.0
 port=9999
 arduino_driver_fix=
 
